--- a/Manual/placeholderTalk.html
+++ b/Manual/placeholderTalk.html
@@ -21,11 +21,7 @@
                 <div class="page-content">
                     <img src="img/Component/Module Name.svg" class="diagram">
                     <h2>On the Subject of Placeholder Talk</h2>
-                    <p class="flavour-text">Maybe we should've waited for a stable release...</p>
-
-					<p class="appendix-reference">
-					See Appendix B for battery identification reference.
-					</p>
+                    <p class="flavour-text">What's a backslash again?</p>
 
                     <p>The module has a display containing a message alongside 4 buttons below it. The message on-screen consists of 
 					2 phrases seperated by a line break. The first phrase can be solved within this first page and the second phrase in 
@@ -38,23 +34,23 @@
 
                     <h3>Extracting the value from the module's first phrase</h3>
                     <p></p>
-                    <p>To figure out the value from the first phrase, do the following calculations:</p>
+                    <p>Start with N = 1. Add 1 to N for every current strike then proceed to use the tables in the following ways:</p>
                     <p></p>
-                    <ol>
-                        <li>Start with N=1.</li>
-                        <li>Add 1 to N for every strike.</li>
-						<li>Multiply N by the number of batteries.</li>
-                        <li>Subtract N according to the following table*.</li>
-                    </ol>
-
-                    <p></p>
+					<ul>
+                        <li>Subtract N from one of the rows in the left/middle table.</li>
+						<li>Add N from one of the rows in the right table.</li>
+					</ul>
+					<p></p>
                     <table>
                         <tr>
-                            <th>Words after</br>"The Answer"</th>
+                            <th>Words after</br>THE ANSWER</th>
                             <th>Subtract</br>N with</th>
 							<td class="middle-row"></td>
-							<th>Words after</br>"The Answer"</th>
+							<th>Words after</br>THE ANSWER</th>
                             <th>Subtract</br>N with</th>
+							<td class="middle-row"></td>
+							<th>Words after the</br>2 left tables</th>
+                            <th>Add N</br>with</th>
                         </tr>
                         <tr>
                             <td>AT</td>
@@ -62,72 +58,90 @@
 							<td class="middle-row"></td>
 							<td>IS THE IN</td>
                             <td rowspan="4">2</td>
+							<td class="middle-row"></td>
+							<td>FIRST POS.</td>
+							<td>1</td>
 						</tr>
                         <tr>
                             <td> </td>
                             <td>-1</td>
 							<td class="middle-row"></td>
 							<td>IN IS</td>
-
+							<td class="middle-row"></td>
+							<td>SECOND POS.</td>
+							<td>2</td>
 						</tr>
                         <tr>
                             <td>IS IN THE</td>
                             <td rowspan="4">0</td>
 							<td class="middle-row"></td>
 							<td>IS IN.</td>
-
+							<td class="middle-row"></td>
+							<td>THIRD POS.</td>
+							<td>3</td>
 						</tr>
                         <tr>
                             <td>IS THE</td>
-
 							<td class="middle-row"></td>
-							<td>KEYBORD</td>
-							
+							<td>LIES</td>
+							<td class="middle-row"></td>
+							<td>FOURTH POS.</td>
+							<td>4</td>
 						</tr>
 						<tr>
                             <td>LAST-</td>
-
 							<td class="middle-row"></td>
 							<td>A</td>
 							<td rowspan="4">3</td>
+							<td class="middle-row"></td>
+							<td>FIFTH POS.</td>
+							<td>5</td>
+						</tr>
                         <tr>
                             <td>IS IN UH</td>
-
 							<td class="middle-row"></td>
 							<td>THE</td>
-
+							<td class="middle-row"></td>
+							<td>MILLIONTH POS.</td>
+							<td rowspan="2">10</td>
 						</tr>
                         <tr>
                             <td>IS</td>
 							<td rowspan="4">1</td>
 							<td class="middle-row"></td>
 							<td>FIRST-</td>
-
+							<td class="middle-row"></td>
+							<td>BILLIONTH POS.</td>
 						</tr>
                         <tr>
                             <td>IS AT</td>
-
 							<td class="middle-row"></td>
 							<td>IS IN</td>
-
+							<td class="middle-row"></td>
+							<td>LAST POS.</td>
+							<td>-4</td>
 						</tr>
                         <tr>
                             <td>IS INN</td>
-
 							<td class="middle-row"></td>
 							<td>IN</td>
                             <td>27</td>
+							<td class="middle-row"></td>
+							<td></td>
+							<td>-1</td>
 						</tr>
 						<tr>
                             <td>UH</td>
-
 							<td class="middle-row"></td>
 							<td>UH IS IN</td>
                             <td>30</td>
+							<td class="middle-row"></td>
+							<td>AN ANSWER.</td>
+							<td>-7</td>
 						</tr>
-                    </table>		
+                    </table>	
 					<p></p>
-					<p>*If none of the phrases fit, subtract N by -1.</p>
+					<p>*If none of the phrases fit in either table, refer to the row containing nothing.</p>
                 </div>
                 <div class="page-footer relative-footer">Page 1 of 5</div>
             </div>
@@ -369,9 +383,9 @@
                         <td>\ \ \ \</td>
                     </tr>
                     <tr>
-                        <td>Parse error: syntax error, <br>unexpected ''\'' in <br>/placeholderTalk/Assets/<br>placeholderTalk.cs on line 737</td>
+                        <td>Parse error: syntax error, <br>unexpected ''\'' in <br>/placeholderTalk/Assets/<br>placeholderTalk.cs on line 786</td>
                         <td class="middle-row"></td>
-                        <td>Parse error: syntax error, <br>unexpected ''\'' in <br>/placeholderTalk/Manual/<br>placeholderTalk.html on line 374</td>
+                        <td>Parse error: syntax error, <br>unexpected ''\'' in <br>/placeholderTalk/Manual/<br>placeholderTalk.html on line 388</td>
                     </tr>
                 </table>
 				</div>
