Final tweaking before public release!

--- a/Manual/placeholderTalk.html
+++ b/Manual/placeholderTalk.html
@@ -21,7 +21,7 @@
                 <div class="page-content">
                     <img src="img/Component/Module Name.svg" class="diagram">
                     <h2>On the Subject of Placeholder Talk</h2>
-                    <p class="flavour-text">What's a backslash again?</p>
+                    <p class="flavour-text">60% of the time, this module reminds you of the game every time.</p>
 
                     <p>The module has a display containing a message alongside 4 buttons below it. The message on-screen consists of 
 					2 phrases seperated by a line break. The first phrase can be solved within this first page and the second phrase in 
@@ -34,12 +34,13 @@
 
                     <h3>Extracting the value from the module's first phrase</h3>
                     <p></p>
-                    <p>Start with N = 1. Add 1 to N for every current strike then proceed to use the tables in the following ways:</p>
+                    <p>Start with N = 1. Add 1 to N for every current strike, then using the three tables:</p>
                     <p></p>
 					<ul>
-                        <li>Subtract N from one of the rows in the left/middle table.</li>
-						<li>Add N from one of the rows in the right table.</li>
+                        <li>Subtract N with one of the rows in the left/middle table.*</li>
+						<li>Add N to one of the rows in the right table.*</li>
 					</ul>
+					<p>*If none of the phrases fit in either table, refer to the row containing nothing.</p>
 					<p></p>
                     <table>
                         <tr>
@@ -141,7 +142,7 @@
 						</tr>
                     </table>	
 					<p></p>
-					<p>*If none of the phrases fit in either table, refer to the row containing nothing.</p>
+					<p>After applying both tables, N will be the calculated value for first phrase.</p>
                 </div>
                 <div class="page-footer relative-footer">Page 1 of 5</div>
             </div>
@@ -153,7 +154,7 @@
                 <div class="page-content">
                     <h3>Extracting the value from the module's second phrase</h3>
                     <p></p>
-                    <p>The following contains every message from the module. Find the exact message below and the number given is the second phrase's value. There are two exceptions to this that must be followed as well:</p>
+                    <p>The following contains every message from the module. Find the exact message below and the number given is the second phrase's value. There are two exceptions that must be followed though:</p>
                     <p></p>
                     <li>If the phrase contains an odd number of /, add 1 to the second phrase's value for every \ present on the module's display.</li>
                     <li>If the phrase asks you to add/subtract N, apply it to the second phrase's value.</li>
@@ -165,6 +166,16 @@
                             <th>Value: 2</th>
                         </tr>
                         <tr>
+                            <td>LITERALLY JUST A / AND THEN A \</td>
+                            <td class="middle-row"></td>
+                            <td>THE LIGHTS WENT OUT, HOLD ON</td>
+                        </tr>
+						<tr>
+							<td>NOTHING</td>
+							<td class="middle-row"></td>
+							<td>SLAAAAAAASH</td>
+						</tr>
+                        <tr>
                             <td>WAIT, IS THIS A BACKSLASH?</td>
                             <td class="middle-row"></td>
                             <td>IT'S EMPTY</td>
@@ -175,19 +186,14 @@
                             <td>ZERO</td>
                         </tr>
                         <tr>
-                            <td>ALFA BRAVO CHARLIE DELTA ECHO FOXTROT</td>
-                            <td class="middle-row"></td>
-                            <td>ALL OF THESE ARE SYMBOLS: SLASH SLASH BACKSLASH</td>
-                        </tr>
-                        <tr>
-                            <td>BLACKSASH</td>
+                            <td>I JUST LOST THE GAME</td>
                             <td class="middle-row"></td>
                             <td>BACKSLASH SLASH BACKSLASH</td>
                         </tr>
                         <tr>
                             <td>BACK \ SLASH \</td>
                             <td class="middle-row"></td>
-                            <td>WAIT HOW MANY BATTERIES DO WE HAVE</td>
+                            <td>ZEEROW</td>
                         </tr>
                         <tr>
                             <td>N + 2</td>
@@ -195,7 +201,7 @@
                             <td>OH WE BLEW UP AS IN THE COLOR</td>
                         </tr>
                         <tr>
-                            <td>WE HAVE WIRE SEQUENCES BLACK TO CHARLIE</td>
+                            <td>WHAT IS YOUR LEAST FAVORITE MODULE?</td>
                             <td class="middle-row"></td>
                             <td>/ * \ = \</td>
                         </tr>
@@ -225,7 +231,7 @@
                             <td>IT'S THE SAME AS BEFORE</td>
                         </tr>
                         <tr>
-                            <td>WHAT IS YOUR LEAST FAVORITE MODULE?</td>
+                            <td>WE HAVE WIRE SEQUENCES BLACK TO CHARLIE</td>
                             <td class="middle-row"></td>
                             <td>THIS MASSAGE IS REALLY HARD TO COMMUNICATE</td>
                         </tr>
@@ -268,9 +274,9 @@
                         <th>Value: 2</th>
                     </tr>
                     <tr>
-                        <td>NOTHING</td>
+                        <td>ALFA BRAVO CHARLIE DELTA ECHO FOXTROT</td>
                         <td class="middle-row"></td>
-                        <td>SLAAAAAAASH</td>
+                        <td>ALL OF THESE ARE SYMBOLS: SLASH SLASH BACKSLASH</td>
                     </tr>
                     <tr>
                         <td>SOME CHINESE CHARACTERS</td>
@@ -280,7 +286,7 @@
                     <tr>
                         <td>/ / / / / / / / / / / / / / / / / / / / / / / /</td>
                         <td class="middle-row"></td>
-                        <td>TWO \ES</td>
+                        <td>ALL WORDS WAIT COMMA IS THIS A BACKSLASH QUESTION MARK</td>
                     </tr>
                     <tr>
                         <td>\ SLASH / SLASH / SLASH / SLASH \</td>
@@ -306,11 +312,6 @@
                         <td>WAIT THE ALARM WENT OFF</td>
                         <td class="middle-row"></td>
                         <td>LAST DIGIT OF THE SERIAL NUMBER</td>
-                    </tr>
-                    <tr>
-                        <td>SINCE WHEN DID WE HAVE A NEEDY?</td>
-                        <td class="middle-row"></td>
-                        <td>BACKHASH</td>
                     </tr>
                     <tr>
                         <td>YOU ARE CUTTING OUT</td>
@@ -340,7 +341,7 @@
                     <tr>
                         <td>TWO \</td>
                         <td class="middle-row"></td>
-                        <td>WAIT IS THIS A BACK SLASH?</td>
+                        <td>WAIT IS THIS A BACKSLASH?</td>
                     </tr>
                     <tr>
                         <td>BLACKHASH</td>
@@ -363,7 +364,7 @@
                         <td>BACK / \ BACK /</td>
                     </tr>
                     <tr>
-                        <td>WAIT COMMA IS THIS A BACKSLASH?</td>
+                        <td>WAIT COMMA IS THIS A BACKSLASH QUESTION MARK</td>
                         <td class="middle-row"></td>
                         <td>ALPHA BRAVO CHARLIE DELTA ECHO FOXTROT</td>
                     </tr>
@@ -373,9 +374,9 @@
                         <td>THIS MODULE HAS BEEN SPONSORED</td>
                     </tr>
                     <tr>
-                        <td>WAIT COMMA IS THIS A BACKSLASH QUESTION MARK</td>
+                        <td>WAIT IT CHANGED</td>
                         <td class="middle-row"></td>
-                        <td>ALL WORDS WAIT COMMA IS THIS A BACKSLASH QUESTION MARK</td>
+                        <td>TWO \ES</td>
                     </tr>
                     <tr>
                         <td>\ / \</td>
@@ -405,12 +406,7 @@
                             <th>Value: 4</th>
                         </tr>
                         <tr>
-                            <td>LITERALLY JUST A / AND THEN A \</td>
-                            <td class="middle-row"></td>
-                            <td>THE LIGHTS WENT OUT, HOLD ON</td>
-                        </tr>
-                        <tr>
-                            <td>WAIT IT CHANGED</td>
+                            <td>WAIT COMMA IS THIS A BACKSLASH?</td>
                             <td class="middle-row"></td>
                             <td>\ * / = \</td>
                         </tr>
@@ -435,7 +431,7 @@
                             <td>BACK BACK SLASH / \</td>
                         </tr>
                         <tr>
-                            <td>QUOTE BACKSLASH SLASH BACKSLASH END QUOTE SYMBOLS</td>
+                            <td>TO BACKSLASHES</td>
                             <td class="middle-row"></td>
                             <td>\ \ \ BACKSLASH</td>
                         </tr>
@@ -470,7 +466,7 @@
                             <td>AYY BEE CEE DEE EEE EFF</td>
                         </tr>
                         <tr>
-                            <td>PRESS 1 IF >2 BATTERIES</td>
+                            <td>PRESS 1 IF >2 BATTERIES, ELSE 2</td>
                             <td class="middle-row"></td>
                             <td>PARSE ERROR</td>
                         </tr>
@@ -497,7 +493,7 @@
                         <tr>
                             <td>/give @a command_block{Name:"\ \ \ \ \ \ \ \ \ \ \ \ \"} 1</td>
                             <td class="middle-row"></td>
-                            <td>ZEEROW</td>
+                            <td>WAIT HOW MANY BATTERIES DO WE HAVE</td>
                         </tr>
                         <tr>
                             <td>A VERY LONG LIST OF SLASHES</td>
@@ -505,14 +501,14 @@
                             <td>BACK \ / \</td>
                         </tr>
                         <tr>
-                            <td>BACKSLASH SLASH SLASH, THE FIRST AND THIRD ARE SYMBOLS</td>
+                            <td>THE TEXT DOESN'T FIT</td>
                             <td class="middle-row"></td>
                             <td>LITERALLY JUST A SLASH AND THEN A \</td>
                         </tr>
                         <tr>
                             <td>BACK BACKSLASH / \</td>
                             <td class="middle-row"></td>
-                            <td>AAAAAAAAAAAAAAAAAAAAAAAAAAAAA</td>
+                            <td>AAAAAAAAAA</td>
                         </tr>
                         <tr>
                             <td>WAIT COMMA IS THIS A BACKSLASH</td>
@@ -552,17 +548,17 @@
                                 <td>/ u r a u r a " \ Parse Error "<br>u r a " \ Parse u r a / " \ Parse<br>Error " Error " \ Parse Error / "</td>
                             </tr>
                             <tr>
-                                <td>TO BACKSLASHES</td>
+                                <td>ABCDEFGHIJKLL NOPQRSTUVWXYZ</td>
                                 <td class="middle-row"></td>
                                 <td>TOO BACKSLASHES</td>
                             </tr>
                             <tr>
-                                <td>ABCDEFGHIJKLL NOPQRSTUVWXYZ</td>
+                                <td>QUOTE BACKSLASH SLASH BACKSLASH END QUOTE SYMBOLS</td>
                                 <td class="middle-row"></td>
                                 <td>BACK- I MEAN SLASH NOT BACKSLASH THEN A BACKSLASH</td>
                             </tr>
                             <tr>
-                                <td>THE TEXT DOESN'T FIT</td>
+                                <td>BACKSLASH SLASH SLASH, THE FIRST AND THIRD ARE SYMBOLS</td>
                                 <td class="middle-row"></td>
                                 <td>THE FIRST, SECOND AND THIRD ARE ALL SYMBOLS, READY? \ \ / BACKSLASH</td>
                             </tr>
@@ -577,7 +573,7 @@
                                 <td>A VERY LONG LIST OF SLASH</td>
                             </tr>
                             <tr>
-                                <td>THIS MODULE HAS BEEN SPONSORED BY RAID SHADOW LEGENDS</td>
+                                <td>I CAN'T SEE ANYTHING</td>
                                 <td class="middle-row"></td>
                                 <td>THERE ARE 20 OR SOMETHING SLASHES</td>
                             </tr>
@@ -597,9 +593,9 @@
                                 <td>SLAAAAAAAAASH</td>
                             </tr>
                             <tr>
-                                <td>I CAN'T SEE ANYTHING</td>
+                                <td>THIS MODULE HAS BEEN SPONSORED BY RAID SHADOW LEGENDS</td>
                                 <td class="middle-row"></td>
-                                <td>THE ANSWER IS IN THE UHHH SECOND POSITION</td>
+                                <td>THE ANSWER IS IN THE UH SECOND POS.</td>
                             </tr>
                             <tr>
                                 <td>\ SLASH \</td>
@@ -610,7 +606,12 @@
                                 <td>THE NUMBER 0</td>
                                 <td class="middle-row"></td>
                                 <td>OH WE BLUE UP AS IN THE COLOR</td>
-                            </tr
+                            </tr>
+							<tr>
+								<td>SINCE WHEN DID WE HAVE A NEEDY?</td>
+								<td class="middle-row"></td>
+								<td>BACKHASH</td>
+							</tr>
 							<tr>
                                 <td>hello guys welcome back to another minecraft video and in todays video we will be talking about my brand new enderman holding a bacon statue, its furious, its hot and its powerful guys. its the definition of engineering at its finest, now lets enter from the rear of the building.</td>
                                 <td class="middle-row"></td>
@@ -622,9 +623,9 @@
                                 <td>BACKWARD SLASH</td>
                             </tr>
                             <tr>
-                                <td>ADD -N IN SECOND PHRASE WHERE <br>N = AMOUNT OF TIMES THIS MODULE<br>HAS BEEN SOLVED IN YOUR CURRENT BOMB</td>
+                                <td>ADD -N IN SECOND PHRASE WHERE N =<br>AMOUNT OF TIMES THIS MODULE HAS BEEN SOLVED IN YOUR CURRENT BOMB</td>
                                 <td class="middle-row"></td>
-                                <td>ADD N IN SECOND PHRASE WHERE <br>N = AMOUNT OF TIMES THIS MODULE <br>HAS BEEN SOLVED IN YOUR CURRENT BOMB</td>
+                                <td>ADD N IN SECOND PHRASE WHERE N =<br>AMOUNT OF TIMES THIS MODULE HAS<br>BEEN SOLVED IN YOUR CURRENT BOMB</td>
                             </tr>
                         </table>
                 </div>
